[metadata]
name = shared_modules
version = 0.0.0
description = Shared modules between Akatsuki v2 services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akatsuki-v2/shared-modules
author = Josh Smith
author_email = cmyuiosu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[bdist_wheel]
universal = True

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
